--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="contact_path">http://172.16.1.95:8080/AndroidServerTest/list.xml</string>
     <string name="title_activity_update_activity">update_activity</string>
     <string name="update_addr">http://172.16.1.95:8080/AndroidServerTest/UpdateService.jsp</string>
+    <string name="title_activity_main_fragement">MainFragementActivity</string>
+    <string name="title_activity_image_result">ImageResultActivity</string>
 </resources>
